Creata la parte della rubrica funzionante e con database. Ho inserito uno spinner per il tipo, ma manca la possibilità di aggiungere tipi, e i colori per le tipologie diverse!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".AttivitaInCorso"
-            android:label="Attività in Corso"
+        <activity android:name=".Impegni"
+            android:label="Impegni"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".Rubrica"
+            android:label="Rubrica"
             android:windowSoftInputMode="adjustPan" />
     </application>
 
