Aggiunta Activity Attività in corso.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".polastri.alessandro.agendapersonale.rubrica.Rubrica"
+        <activity
+            android:name=".polastri.alessandro.agendapersonale.rubrica.Rubrica"
             android:label="Rubrica"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".polastri.alessandro.agendapersonale.attivita.AttivitaInCorso"
+            android:label="Attività in Corso"
             android:windowSoftInputMode="adjustPan" />
     </application>
 
