--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,10 @@ apply plugin: "org.sonarqube"
 
 sonarqube {
     properties {
-        property "sonar.projectName", "MyApplication2"
+        property "sonar.projectName", "MyApplication"
         property "sonar.projectKey", "SQKey"
         property "sonar.sources", "src/main/java"
         property "sonar.language", "java"
         property "sonar.sourceEncoding", "UTF-8"
-//        property "sonar.exclusions", "src/main/java/com/foo/Foo.java"
     }
 }
